--- a/views/about.html
+++ b/views/about.html
@@ -1,57 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <title>About</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="navbar bg-base-100">
-        <div class="navbar-start">
-          <div class="dropdown">
-            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M4 6h16M4 12h8m-8 6h16" />
-              </svg>
-            </div>
+      <div class="navbar-start">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16"
+              />
+            </svg>
           </div>
-          <a class="btn btn-ghost text-xl">WEB322-Hanson Chieu</a>
-        </div>
-        <div class="navbar-center">
-          <ul class="menu menu-horizontal px-1">
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+          >
             <li><a href="/shop">Shop</a></li>
             <li><a href="/items">Items</a></li>
             <li><a href="/categories">Categories</a></li>
             <li><a href="/about">About</a></li>
           </ul>
         </div>
+        <a class="btn btn-ghost text-xl">WEB322-Hanson Chieu</a>
       </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+          <li><a href="/shop">Shop</a></li>
+          <li><a href="/items">Items</a></li>
+          <li><a href="/categories">Categories</a></li>
+          <li><a href="/about">About</a></li>
+        </ul>
+      </div>
+    </div>
 
-      <div class="container mx-auto p-4">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-          <div class="col-span-2 card bg-base-200 p-4 shadow-lg">
-              <h2 class="text-2xl font-bold">About</h2>
-              <p>
-                I am currently studying web development with a focus on front-end technologies. I have a keen interest in creating user-friendly interfaces and learning more about responsive design. My goal is to build interactive applications that enhance user experience.
-              </p>
-          </div>
-          <div class="card bg-base-200 p-4 shadow-lg">
-              <h2 class="text-2xl font-bold">Coming Soon</h2>
-              <p>
-                Stay tuned for future updates! 
-              </p>
-          </div>
+    <div class="container mx-auto p-4">
+      <div class="flex flex-col md:flex-row gap-4">
+        <div class="w-full md:w-1/5 mt-4">
+          <h2 class="text-2xl font-bold">Coming Soon</h2>
+          <p>Stay tuned for future updates!</p>
+        </div>
+        <div class="flex-grow w-full md:w-2/3 card bg-base-200 p-4 shadow-lg">
+          <h2 class="text-2xl font-bold">About</h2>
+          <p>
+            I am studying Computer Programming and Analysis at Seneca
+            Polytechnic. I am passionate about creating user-friendly interfaces
+            and learning more about responsive design, which I hope to explore
+            in my web courses. My goal is to build interactive applications that
+            enhance user experience and provide real benefits.
+            <br />
+            <br />
+            My current academic and career goal is to secure a co-op opportunity
+            where I can work on large, complex applications and utilize my
+            technical skills. I aim to gain insight into the inner workings of a
+            tech company, enhance my programming abilities, and gain a fresh
+            perspective on software and web development.
+            <br />
+            <br />
+            In my free time, I've gotten into DJing and recently started
+            learning to mix with a controller I bought. I also love going to
+            concerts and raves, which always energize me! One thing I want to
+            get back into is working out. I've been inconsistent with the gym
+            this past year, and I'm definitely feeling the effects.
+          </p>
+        </div>
       </div>
-  </div>
-</body>
+    </div>
+  </body>
 </html>
