--- a/views/about.html
+++ b/views/about.html
@@ -37,6 +37,7 @@
             class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
           >
             <li><a href="/shop">Shop</a></li>
+            <li><a href="/items/add">Add Item</a></li>
             <li><a href="/items">Items</a></li>
             <li><a href="/categories">Categories</a></li>
             <li><a href="/about">About</a></li>
@@ -47,6 +48,7 @@
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
           <li><a href="/shop">Shop</a></li>
+          <li><a href="/items/add">Add Item</a></li>
           <li><a href="/items">Items</a></li>
           <li><a href="/categories">Categories</a></li>
           <li><a href="/about">About</a></li>
