Fixed bugs for AS3

--- a/views/about.html
+++ b/views/about.html
@@ -43,7 +43,7 @@
             <li><a href="/about">About</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost text-xl">WEB322-Hanson Chieu</a>
+        <a class="btn btn-ghost text-xl" href="/about">WEB322-Hanson Chieu</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
