--- a/views/addItem.html
+++ b/views/addItem.html
@@ -42,7 +42,7 @@
             <li><a href="/about">About</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost text-xl">WEB322-Hanson Chieu</a>
+        <a class="btn btn-ghost text-xl" href="/about">WEB322-Hanson Chieu</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
@@ -73,10 +73,10 @@
           <legend class="text-lg font-semibold mb-2">Post Content</legend>
           <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
             <div class="sm:col-span-4">
-              <label for="itemName" class="block text-sm/6 font-medium text-gray-900">Item Name</label>
+              <label for="title" class="block text-sm/6 font-medium text-gray-900">Item Name</label>
               <div class="mt-2">
                 <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                  <input type="text" name="itemName" id="itemName" autocomplete="itemName" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6">
+                  <input type="text" name="title" id="title" autocomplete="title" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6">
                 </div>
               </div>
             </div>
@@ -93,9 +93,9 @@
         </div>
       
         <div class="col-span-full">
-            <label for="description" class="block text-sm/6 font-medium text-gray-900 mt-10">Description</label>
+            <label for="body" class="block text-sm/6 font-medium text-gray-900 mt-10">Description</label>
             <div class="mt-2">
-              <textarea id="description" name="description" rows="3" class="block w-3/4 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"></textarea>
+              <textarea id="body" name="body" rows="3" class="block w-3/4 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"></textarea>
             </div>
           </div>
       
@@ -118,10 +118,10 @@
               <div class="mt-2 space-y-6">
                 <div class="relative flex gap-x-3">
                   <div class="flex h-6 items-center">
-                    <input id="publish" name="publish" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                    <input id="published" name="published" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
                   </div>
                   <div class="text-sm/6">
-                    <label for="publish" class="font-medium text-gray-900">Publish</label>
+                    <label for="published" class="font-medium text-gray-900">Publish</label>
                   </div>
                 </div>
       
