--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -1,60 +1,3 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Space+Grotesk:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Add Item</title>
-  </head>
-  <body>
-    <div class="navbar bg-base-100">
-      <div class="navbar-start">
-        <div class="dropdown">
-          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h8m-8 6h16"
-              />
-            </svg>
-          </div>
-          <ul
-            tabindex="0"
-            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
-          >
-            <li><a href="/shop">Shop</a></li>
-            <li><a href="/items/add">Add Item</a></li>
-            <li><a href="/items">Items</a></li>
-            <li><a href="/categories">Categories</a></li>
-            <li><a href="/about">About</a></li>
-          </ul>
-        </div>
-        <a class="btn btn-ghost text-xl" href="/about">WEB322-Hanson Chieu</a>
-      </div>
-      <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal px-1">
-          <li><a href="/shop">Shop</a></li>
-          <li><a href="/items/add">Add Item</a></li>
-          <li><a href="/items">Items</a></li>
-          <li><a href="/categories">Categories</a></li>
-          <li><a href="/about">About</a></li>
-        </ul>
-      </div>
-    </div>
     <form method="post" action="/items/add" enctype="multipart/form-data">
         <fieldset class="mb-6 ml-6 mt-4">
           <legend class="text-lg font-semibold mb-2">Feature Image</legend>
@@ -87,7 +30,7 @@
               <label for="price" class="block text-sm/6 font-medium text-gray-900">Price</label>
               <div class="mt-2">
                 <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                  <input type="number" name="price" id="price" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6">
+                  <input type="number" name="price" id="price" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6" step="0.01">
                 </div>
               </div>
             </div>
@@ -132,5 +75,3 @@
             <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Item</button>
           </div>
     </form>
-</body>
-</html>
