--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,10 +6,10 @@
     <title><%=title%></title>
 </head>
 <body>
-    <main>
-        <h1>404 - Page Not Found</h1>
-        <p>Oops! The page you're looking for doesn't exist.</p>
-        <a href="/shop">Back to Shop</a>
+    <main class="flex flex-col items-center justify-center min-h-screen bg-gray-50">
+        <h1 class="text-4xl font-bold text-red-500">404 - Page Not Found</h1>
+        <p class="text-black text-lg mt-4">Oops! The page you're looking for doesn't exist.</p>
+        <a class="text-blue-500 underline mt-4 text-lg" href="/">Back to Shop</a>
     </main>
 </body>
 </html>
