--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1,57 +1,12 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.navbar {
-  font-family:"verdana", sans-serif;
-  color: rgb(159, 161, 163);
-  background-color: rgba(5, 5, 29, 0.801);
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.863);
-}
-
-.navbar-start {
-  width: 37%;
-  justify-content: flex-start;
-}
-
-:where(.menu li) {
-  margin-right: 1.5em;
-}
-
-.dropdown-content {
-  color: aliceblue;
-}
-
-@media (hover: hover) {
-  .menu li > *:not(ul, .menu-title, details, .btn):hover {
-    background-color: rgba(19, 19, 49, 0.411);
-  }
-}
-
-.text-xl {
-  font-family: "Mulish", sans-serif !important;
-  color: aliceblue;
-  font-size: 1.6em;
-  font-weight: 600;
-}
-
-.mulish {
-  font-family: "Mulish", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-}
-
-.menu li.active a {
-  font-weight:bolder;
-  color: aliceblue; 
-}
-
-.text-2xl{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 2em;
-}
-
-.categoryLink{
-  color: rgb(99, 132, 241);
-  text-decoration: underline;
-}
+@tailwind base; @tailwind components; @tailwind utilities; .navbar {
+font-family: "verdana", sans-serif; color: rgb(159, 161, 163); background-color:
+rgba(5, 5, 29, 0.801); box-shadow: 0 0 6px rgba(0, 0, 0, 0.863); } .navbar-start
+{ width: 37%; justify-content: flex-start; } :where(.menu li) { margin-right:
+1.5em; } .dropdown-content { color: aliceblue; } @media (hover: hover) { .menu
+li > *:not(ul, .menu-title, details, .btn):hover { background-color: rgba(19,
+19, 49, 0.411); } } .text-xl { font-family: "Mulish", sans-serif !important;
+color: aliceblue; font-size: 1.6em; font-weight: 600; } .mulish { font-family:
+"Mulish", sans-serif; font-optical-sizing: auto; font-style: normal; } .menu
+li.active a { font-weight: bolder; color: aliceblue; } .text-2xl { font-family:
+Arial, Helvetica, sans-serif; font-size: 2em; } .categoryLink { color: rgb(99,
+132, 241); text-decoration: underline; }
