--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%=title%></title>
-</head>
-<body>
-    <main class="flex flex-col items-center justify-center min-h-screen bg-gray-50">
-        <h1 class="text-4xl font-bold text-red-500">404 - Page Not Found</h1>
-        <p class="text-black text-lg mt-4">Oops! The page you're looking for doesn't exist.</p>
-        <a class="text-blue-500 underline mt-4 text-lg" href="/">Back to Shop</a>
+  </head>
+  <body>
+    <main
+      class="flex flex-col items-center justify-center min-h-screen bg-gray-50"
+    >
+      <h1 class="text-4xl font-bold text-red-500">404 - Page Not Found</h1>
+      <p class="text-black text-lg mt-4">
+        Oops! The page you're looking for doesn't exist.
+      </p>
+      <a class="text-blue-500 underline mt-4 text-lg" href="/">Back to Shop</a>
     </main>
-</body>
+  </body>
 </html>
