--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -1,77 +1,137 @@
-    <form method="post" action="/items/add" enctype="multipart/form-data">
-        <fieldset class="mb-6 ml-6 mt-4">
-          <legend class="text-lg font-semibold mb-2">Feature Image</legend>
-          <div class="w-3/4">
-            <div class="mb-4">
+<form method="post" action="/items/add" enctype="multipart/form-data">
+  <h1 class="text-2xl font-bold ml-6 mt-2">Add Items</h1>
+  <hr class="mt-2" />
+  <fieldset class="mb-6 ml-6 mt-4">
+    <legend class="text-lg font-semibold mb-2">Feature Image</legend>
+    <div class="w-3/4">
+      <div class="mb-4">
+        <input
+          class="w-3/4 p-2 border border-gray-300 rounded-lg"
+          id="featureImage"
+          name="featureImage"
+          type="file"
+        />
+      </div>
+    </div>
+  </fieldset>
+
+  <fieldset class="mb-6 ml-6">
+    <legend class="text-lg font-semibold mb-2">Post Content</legend>
+    <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+      <div class="sm:col-span-4">
+        <label for="title" class="block text-sm/6 font-medium text-gray-900">Item Name</label>
+        <div class="mt-2">
+          <div
+            class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md"
+          >
+            <input
+              type="text"
+              name="title"
+              id="title"
+              autocomplete="title"
+              class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+      <div class="sm:col-span-4">
+        <label for="price" class="block text-sm/6 font-medium text-gray-900">Price</label>
+        <div class="mt-2">
+          <div
+            class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md"
+          >
+            <input
+              type="number"
+              name="price"
+              id="price"
+              class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6"
+              step="0.01"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-full">
+      <label for="body" class="block text-sm/6 font-medium text-gray-900 mt-10">Description</label>
+      <div class="mt-2">
+        <textarea
+          id="body"
+          name="body"
+          rows="3"
+          class="block w-3/4 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"
+        ></textarea>
+      </div>
+    </div>
+
+    <div class="sm:col-span-3">
+      <label for="category" class="block text-sm/6 font-medium text-gray-900 mt-10">Category</label>
+      <div class="mt-2">
+        <% if (categories && categories.length > 0) { %>
+          <select
+            id="category"
+            name="category"
+            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm/6"
+          >
+            <option value="">Select Category</option>
+            <% categories.forEach(category => { %>
+              <option value="<%= category.id %>"><%= category.category %></option>
+            <% }); %>
+          </select>
+        <% } else { %>
+          <div>No Categories</div>
+        <% } %>
+      </div>
+    </div>
+
+    <div class="mt-10 space-y-10">
+      <fieldset>
+        <legend class="text-sm/6 font-semibold text-gray-900">Visibility</legend>
+        <div class="mt-2 space-y-6">
+          <div class="relative flex gap-x-3">
+            <div class="flex h-6 items-center">
               <input
-                class="w-3/4 p-2 border border-gray-300 rounded-lg"
-                id="featureImage"
-                name="featureImage"
-                type="file"
+                id="published"
+                name="published"
+                type="checkbox"
+                class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
               />
             </div>
-          </div>
-        </fieldset>
-      
-        <fieldset class="mb-6 ml-6">
-          <legend class="text-lg font-semibold mb-2">Post Content</legend>
-          <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="sm:col-span-4">
-              <label for="title" class="block text-sm/6 font-medium text-gray-900">Item Name</label>
-              <div class="mt-2">
-                <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                  <input type="text" name="title" id="title" autocomplete="title" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6">
-                </div>
-              </div>
+            <div class="text-sm/6">
+              <label for="published" class="font-medium text-gray-900">Publish</label>
             </div>
+          </div>
+
+          <hr class="my-6" />
+          <div class="mt-6 flex items-center justify-end gap-x-6 mr-4">
+            <button href="/items/add" type="button" class="text-sm/6 font-semibold text-gray-900" onclick="clearAllInputs();">
+              Clear
+            </button>
+            <button
+              type="submit"
+              class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+            >
+              Add Item
+            </button>
+          </div>
         </div>
-        <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="sm:col-span-4">
-              <label for="price" class="block text-sm/6 font-medium text-gray-900">Price</label>
-              <div class="mt-2">
-                <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                  <input type="number" name="price" id="price" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm/6" step="0.01">
-                </div>
-              </div>
-            </div>
-        </div>
-      
-        <div class="col-span-full">
-            <label for="body" class="block text-sm/6 font-medium text-gray-900 mt-10">Description</label>
-            <div class="mt-2">
-              <textarea id="body" name="body" rows="3" class="block w-3/4 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"></textarea>
-            </div>
-          </div>
-      
-          <div class="sm:col-span-3">
-            <label for="category" class="block text-sm/6 font-medium text-gray-900 mt-10">Category</label>
-            <div class="mt-2">
-              <select id="category" name="category" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm/6">
-                <option value="1">Home, Garden</option>
-                <option value="2">Electronics, Computers, Video Games</option>
-                <option value="3">Clothing</option>
-                <option value="4">Sports & Outdoors</option>
-                <option value="5">Pets</option>
-              </select>
-            </div>
-          </div>
-      
-          <div class="mt-10 space-y-10">
-            <fieldset>
-              <legend class="text-sm/6 font-semibold text-gray-900">Visibility</legend>
-              <div class="mt-2 space-y-6">
-                <div class="relative flex gap-x-3">
-                  <div class="flex h-6 items-center">
-                    <input id="published" name="published" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                  </div>
-                  <div class="text-sm/6">
-                    <label for="published" class="font-medium text-gray-900">Publish</label>
-                  </div>
-                </div>
-      
-        <hr class="my-6" />
-        <div class="mt-6 flex items-center justify-end gap-x-6 mr-4">
-            <button type="button" class="text-sm/6 font-semibold text-gray-900">Cancel</button>
-            <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Item</button>
-          </div>
-    </form>
+      </fieldset>
+    </div>
+  </fieldset>
+</form>
+
+<script>
+  function clearAllInputs() {
+
+    const inputs = document.querySelectorAll('input, textarea, select');
+  
+    inputs.forEach(input => {
+      input.value = '';
+      if (input.type === 'checkbox' || input.type === 'radio') {
+        input.checked = false;
+      }
+    });
+  }
+</script>
