--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,36 +1,58 @@
 <div class="row">
-    <div class="col-md-12">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-2xl font-bold ml-4">Categories</h1>
-                <hr class="mt-2">
-                <div class="col-md-12 pt-4">
-                    <div class="table-responsive">
-                      <table class="table">
-                        <thead>
-                          <tr>
-                            <th>Category ID</th>
-                            <th>Category Name</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <% categories.forEach(category => { %>
-                            <tr>
-                              <td><a class ="categoryLink" href="/categories?id=<%= category.id %>"><%= category.id %></a></td>
-                              <td><a class ="categoryLink" href="/categories?category=<%= category.category%>"><%= category.category%></a></td>
-                            </tr>
-                          <% }) %>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                  
-                  <% if (!categories || categories.length === 0) { %>
-                    <div class="col-md-12 text-center">
-                      <strong><%= message %></strong>
-                    </div>
-                  <% } %>
-            </div>
-        </div> 
+  <div class="col-md-12">
+    <div class="flex justify-between w-full">
+      <h1 class="text-2xl font-bold ml-6 mt-2">Categories</h1>
+      <a
+        href="/categories/add"
+        type="link"
+        class="btn rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 mr-10"
+        >Add Category</a
+      >
     </div>
+    <hr class="mt-2" />
+    <div class="col-md-12 pt-4">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Category ID</th>
+              <th>Category Name</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% categories.forEach(category => { %>
+            <tr>
+              <td>
+                <a class="categoryLink" href="/categories?id=<%= category.id %>"
+                  ><%= category.id %></a
+                >
+              </td>
+              <td>
+                <a
+                  class="categoryLink"
+                  href="/categories?category=<%= category.category%>"
+                  ><%= category.category%></a
+                >
+              </td>
+              <td>
+                <a href="/categories/delete/<%= category.id %>"
+                  class="btn btn-danger"
+                  onclick="return confirm('Are you sure you want to delete this category?')">
+                  Remove
+                </a>
+              </td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <% if (!categories || categories.length === 0) { %>
+    <div class="col-md-12 text-center">
+      <strong><%= message %></strong>
+    </div>
+    <% } %>
+  </div>
 </div>
