--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,40 +1,60 @@
 <div class="row">
-    <div class="col-md-12">
-        <h1 class="text-2xl font-bold ml-4">Items</h1>
-        <hr class="mt-2">
-        <div class="col-md-12 pt-4">
-            <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Item ID</th>
-                    <th>Title</th>
-                    <th>Post Date</th>
-                    <th>Category</th>
-                    <th>Price</th>
-                    <th>Published</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% items.forEach(item => { %>
-                    <tr>
-                      <td><%= item.id %></td>
-                      <td><%= item.title %></td>
-                      <td><%= item.postDate %></td>
-                      <td><a class ="categoryLink" href="/items?category=<%= item.id %>"><%= item.category %></a></td>
-                      <td><%= item.price %></td>
-                      <td><%= item.published %></td>
-                    </tr>
-                  <% }) %>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          
-          <% if (!items || items.length === 0) { %>
-            <div class="col-md-12 text-center">
-              <strong><%= message %></strong>
-            </div>
-          <% } %>
+  <div class="col-md-12">
+    <div class="flex justify-between w-full">
+      <h1 class="text-2xl font-bold ml-6 mt-2">Items</h1>
+      <a
+        href="/items/add"
+        type="link"
+        class="btn rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 mr-10"
+        >Add Post</a
+      >
     </div>
+    <hr class="mt-2" />
+  </div>
+  <div class="col-md-12 pt-4">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Item ID</th>
+            <th>Title</th>
+            <th>Post Date</th>
+            <th>Category</th>
+            <th>Price</th>
+            <th>Published</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% if (items.length > 0) { %> <% items.forEach(item => { %>
+          <tr>
+            <td><%= item.id %></td>
+            <td><%= item.title %></td>
+            <td><%= item.postDate %></td>
+            <td>
+              <a class="categoryLink" href="/items?category=<%= item.id %>"
+                ><%= item.category %></a
+              >
+            </td>
+            <td><%= item.price %></td>
+            <td><%= item.published %></td>
+            <td>
+              <a href="/items/delete/<%= item.id %>"
+                class="btn btn-danger"
+                onclick="return confirm('Are you sure you want to delete this item?')">
+                Remove
+              </a>
+            </td>
+          </tr>
+          <% }) %> <% } %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <% if (items.length === 0 && message) { %>
+  <div class="col-md-12 text-center">
+    <strong><%= message %></strong>
+  </div>
+  <% } %>
 </div>
