Updated for Assignment 6

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -36,9 +36,11 @@
                 >
               </td>
               <td>
-                <a href="/categories/delete/<%= category.id %>"
+                <a
+                  href="/categories/delete/<%= category.id %>"
                   class="btn btn-danger"
-                  onclick="return confirm('Are you sure you want to delete this category?')">
+                  onclick="return confirm('Are you sure you want to delete this category?')"
+                >
                   Remove
                 </a>
               </td>
