--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -19,7 +19,9 @@
     <legend class="text-lg font-semibold mb-2">Post Content</legend>
     <div class="mt-3 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
       <div class="sm:col-span-4">
-        <label for="title" class="block text-sm/6 font-medium text-gray-900">Item Name</label>
+        <label for="title" class="block text-sm/6 font-medium text-gray-900"
+          >Item Name</label
+        >
         <div class="mt-2">
           <div
             class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md"
@@ -37,7 +39,9 @@
     </div>
     <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
       <div class="sm:col-span-4">
-        <label for="price" class="block text-sm/6 font-medium text-gray-900">Price</label>
+        <label for="price" class="block text-sm/6 font-medium text-gray-900"
+          >Price</label
+        >
         <div class="mt-2">
           <div
             class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md"
@@ -55,7 +59,9 @@
     </div>
 
     <div class="col-span-full">
-      <label for="body" class="block text-sm/6 font-medium text-gray-900 mt-10">Description</label>
+      <label for="body" class="block text-sm/6 font-medium text-gray-900 mt-10"
+        >Description</label
+      >
       <div class="mt-2">
         <textarea
           id="body"
@@ -67,28 +73,40 @@
     </div>
 
     <div class="sm:col-span-3">
-      <label for="category" class="block text-sm/6 font-medium text-gray-900 mt-10">Category</label>
+      <label
+        for="category"
+        class="block text-sm/6 font-medium text-gray-900 mt-10"
+        >Category</label
+      >
       <div class="mt-2">
         <% if (categories && categories.length > 0) { %>
-          <select
-            id="category"
-            name="category"
-            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm/6"
-          >
-            <option value="">Select Category</option>
-            <% categories.forEach(category => { %>
-              <option value="<%= category.id %>"><%= category.category %></option>
-            <% }); %>
-          </select>
+        <select
+          id="category"
+          name="category"
+          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm/6"
+        >
+          <option value="">Select Category</option>
+          <% categories.forEach(category => { %>
+          <option value="<%= category.id %>"><%= category.category %></option>
+          <% }); %>
+        </select>
         <% } else { %>
-          <div>No Categories</div>
+          <div class="no-categories-container flex items-center space-x-2">
+            <div>No Categories</div>
+            <a href="/categories/add" class="text-sm font-semibold bg-green-500 rounded-md p-2">
+                <i class="fa-solid fa-plus"></i>
+                Add
+            </a>
+        </div>
         <% } %>
       </div>
     </div>
 
     <div class="mt-10 space-y-10">
       <fieldset>
-        <legend class="text-sm/6 font-semibold text-gray-900">Visibility</legend>
+        <legend class="text-sm/6 font-semibold text-gray-900">
+          Visibility
+        </legend>
         <div class="mt-2 space-y-6">
           <div class="relative flex gap-x-3">
             <div class="flex h-6 items-center">
@@ -100,13 +118,20 @@
               />
             </div>
             <div class="text-sm/6">
-              <label for="published" class="font-medium text-gray-900">Publish</label>
+              <label for="published" class="font-medium text-gray-900"
+                >Publish</label
+              >
             </div>
           </div>
 
           <hr class="my-6" />
           <div class="mt-6 flex items-center justify-end gap-x-6 mr-4">
-            <button href="/items/add" type="button" class="text-sm/6 font-semibold text-gray-900" onclick="clearAllInputs();">
+            <button
+              href="/items/add"
+              type="button"
+              class="text-sm/6 font-semibold text-gray-900"
+              onclick="clearAllInputs();"
+            >
               Clear
             </button>
             <button
@@ -124,12 +149,11 @@
 
 <script>
   function clearAllInputs() {
+    const inputs = document.querySelectorAll("input, textarea, select");
 
-    const inputs = document.querySelectorAll('input, textarea, select');
-  
-    inputs.forEach(input => {
-      input.value = '';
-      if (input.type === 'checkbox' || input.type === 'radio') {
+    inputs.forEach((input) => {
+      input.value = "";
+      if (input.type === "checkbox" || input.type === "radio") {
         input.checked = false;
       }
     });
